--- a/management/pom.xml
+++ b/management/pom.xml
@@ -53,6 +53,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.2.0</version> <!-- Updated version -->
+			</plugin>
 		</plugins>
 	</build>
 </project>
