--- a/management/Dockerfile
+++ b/management/Dockerfile
@@ -1,20 +1,18 @@
-# Use the official Maven image to build the application
-# This will use Maven 3.6.3 and OpenJDK 17
+# Stage 1: Build
 FROM maven:3.6.3-openjdk-17 AS build
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the pom.xml and source code
+# Copy the Maven POM file and source code
 COPY pom.xml .
 COPY src ./src
 
 # Build the application
 RUN mvn clean package -DskipTests
 
-# Use the official OpenJDK image to run the application
-# This will use OpenJDK 17
-FROM openjdk:17
+# Stage 2: Run
+FROM openjdk:17-jre-slim
 
 # Set the working directory
 WORKDIR /app
@@ -22,7 +20,7 @@ WORKDIR /app
 # Copy the JAR file from the build stage
 COPY --from=build /app/target/your-app.jar ./app.jar
 
-# Expose the port your application will run on
+# Expose the port the application runs on
 EXPOSE 8080
 
 # Run the application
