--- a/management/Dockerfile
+++ b/management/Dockerfile
@@ -12,7 +12,7 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Stage 2: Run
-FROM openjdk:17-jre-slim
+FROM openjdk:17
 
 # Set the working directory
 WORKDIR /app
